[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image2oss"
version = "0.0.3"
description = "使用阿里云oss上的图片,或者保存结果图片至阿里云oss"
authors = [
  {name = "nxt5656", email = "nxt5656@live.cn"}
]
readme = "README.md"
license = {text = "GNU General Public License v3"}
classifiers = []
dependencies = []
repository = "https://github.com/nxt5656/image2oss"

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
bugs = "https://github.com/nxt5656/image2oss/issues"
homepage = "https://github.com/nxt5656/image2oss"
Repository = "https://github.com/nxt5656/image2oss"

[tool.comfy]
PublisherId = "nxt5656"
DisplayName = "comfyui_image2oss"
Icon = "http://zhiyi-opsdev.oss-cn-hangzhou.aliyuncs.com/tmp/demo.png"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
